hugr-llvm/src/extension/snapshots/hugr_llvm__extension__prelude__test__prelude_make_error_and_panic@pre-mem2reg@llvm20.snap
---
source: hugr-llvm/src/extension/prelude.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [7 x i8] c"Error!\00", align 1
@prelude.panic_template = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1

define private void @_hl.main.1() {
alloca_block:
  %"7_0" = alloca ptr, align 8
  %"5_0" = alloca i64, align 8
  %"8_0" = alloca { i32, ptr }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store ptr @0, ptr %"7_0", align 8
  store i64 100, ptr %"5_0", align 4
  %"5_01" = load i64, ptr %"5_0", align 4
  %"7_02" = load ptr, ptr %"7_0", align 8
  %0 = trunc i64 %"5_01" to i32
  %1 = insertvalue { i32, ptr } undef, i32 %0, 0
  %2 = insertvalue { i32, ptr } %1, ptr %"7_02", 1
  store { i32, ptr } %2, ptr %"8_0", align 8
  %"8_03" = load { i32, ptr }, ptr %"8_0", align 8
  %3 = extractvalue { i32, ptr } %"8_03", 0
  %4 = extractvalue { i32, ptr } %"8_03", 1
  %5 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template, i32 %3, ptr %4)
  call void @abort()
  ret void
}

declare i32 @printf(ptr, ...)

declare void @abort()
